<resources>
    <string name="app_name">Wordpad</string>
    <string name="search">search</string>
    <string name="edit">Edit Wordpad</string>
    <string name="title_activity_func_b" translatable="false">FuncB</string>
    <string name="title_activity_slider" translatable="false">SliderActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="drawer_open" translatable="false">Open Drawer</string>
    <string name="drawer_close" translatable="false">Close Drawer</string>
    <string name="title">Wordpad</string>
    <string name="personal" translatable="false">Personal</string>
    <string name="save">Save</string>
    <string name="news" translatable="false">News</string>
    <string name="stock">Stock</string>
    <string name="Stock">Stock</string>
    <string name="industry">HANGYEXINXIYULINGZHANGGU</string>
    <string name="setting">Setting</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="game">Game</string>
    <string name="news1" translatable="false">news1</string>
    <string name="news2" translatable="false">News2</string>
    <string name="education">Education</string>
    <string name="edu_d_1">Haodaxuezaixian</string>
    <string name="edu_d_2">Ichunqiu</string>
    <string name="edu_d_3">51CTO</string>
    <string name="edu_d_4">Zhufengshequ</string>
    <string name="edu_d_14">Maizixueyuan</string>
    <string name="edu_d_13">Zhongguodaxuemuke</string>
    <string name="edu_d_12">Xuetangzaixian</string>
    <string name="edu_d_11">Mooczhongguo</string>
    <string name="edu_d_10">Jisuanke</string>
    <string name="edu_d_9">JIkexueyuan</string>
    <string name="edu_d_8">Kaikeba</string>
    <string name="edu_d_7">Dingnixuetang</string>
    <string name="edu_d_6">Wangmendaxue</string>
    <string name="edu_d_5">Yihuwang</string>
    <string name="edu_i_1" translatable="false">Berkeley</string>
    <string name="edu_i_2" translatable="false">MIT</string>
    <string name="edu_i_3" translatable="false">CMU</string>
    <string name="edu_i_4" translatable="false">Openlearn</string>
    <string name="edu_i_5" translatable="false">Washington</string>
    <string name="edu_i_6" translatable="false">Tufts</string>
    <string name="edu_i_7" translatable="false">KhanAcademy</string>
    <string name="edu_i_8" translatable="false">EDX</string>
    <string name="edu_i_9" translatable="false">Coursera</string>
    <string name="edu_i_10" translatable="false">TED</string>
    <string name="university">University</string>
    <string name="next">Next</string>
    <string name="qs">2019nianqsdaxuepaihangbangqian100</string>
    <string name="back">Back</string>
    <string name="money">Yaoyiyaolaiqianghongbao</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="dial">Dial School</string>
    <string name="returnfragment" translatable="false">Return</string>
    <string name="chachong">Chachong</string>
    <string name="other">Other</string>
    <string name="choose">ChooseClass</string>
    <string name="option">Options</string>
    <string name="nodata">NO DATA</string>

</resources>
