<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Options">
        <menu>

            <item
                android:id="@+id/menu_university"
                android:icon="@drawable/news"
                android:title="@string/university" />
            <item
                android:id="@+id/menu_news"
                android:icon="@drawable/news"
                android:title="@string/education" />
            <item
                android:id="@+id/menu_stock"
                android:icon="@drawable/news"
                android:title="@string/stock" />
            <item
                android:id="@+id/menu_game"
                android:icon="@drawable/news"
                android:title="@string/game" />
        </menu>

    </item>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/news"
                android:title="@string/about" />
           
            <item
                android:id="@+id/menu_more"
                android:icon="@drawable/setting"
                android:title="@string/more" />
        </menu>


    </item>


</menu>