<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EducationFirstFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_edu_d1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_1" />
                <Button
                    android:id="@+id/btn_edu_d2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_2" />
                <Button
                    android:id="@+id/btn_edu_d3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_3" />
                <Button
                    android:id="@+id/btn_edu_d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_4" />
                <Button
                    android:id="@+id/btn_edu_d5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_5" />
                <Button
                    android:id="@+id/btn_edu_d6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_6" />
                <Button
                    android:id="@+id/btn_edu_d7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_7" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_edu_d8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_8" />

                <Button
                    android:id="@+id/btn_edu_d9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_9" />
                <Button
                    android:id="@+id/btn_edu_d10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_10" />
                <Button
                    android:id="@+id/btn_edu_d11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_11" />
                <Button
                    android:id="@+id/btn_edu_d12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_12" />
                <Button
                    android:id="@+id/btn_edu_d13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_13" />
                <Button
                    android:id="@+id/btn_edu_d14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_d_14" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>