<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Edit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:background="#87CEEB"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_return_4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/return_1" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_return_4"
            android:layout_toRightOf="@+id/btn_return_4"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit"
            android:textColor="#000000"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/save"
            android:textSize="10dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFAE99"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
